[package]
name = "scanner"
version = "0.1.0"
authors = ["yuchunzhou <chunzhou.yu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.3.2"
clap = "2.33.3"
trust-dns-resolver = "0.19.5"
num_cpus = "1.13.0"
threadpool = "1.8.1"

[features]
debug = []
